feat: middleware para proteger os videos

--- a/public/video.html
+++ b/public/video.html
@@ -11,7 +11,7 @@
   <h2>Testando Streaming</h2>
 
   <video id="videoplayer" controls>
-    <source src="/episodes/stream?videoUrl=videos/course-2/02.04 Types e Interfaces 1.mp4" type="video/mp4">
+    <source src="/episodes/stream?videoUrl=videos/course-2/02.04 Types e Interfaces 1.mp4&token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6NSwibmFtZSI6IkNhcmxvcyIsImVtYWlsIjoiam9obkBlbWFpbC5jb20iLCJpYXQiOjE2ODcwMjc2OTEsImV4cCI6MTY4NzExNDA5MX0.fWTVTUJWmiBCO28n-y-JwRQFHH526voNKKRwPg6cPhw" type="video/mp4">
   </video>
 
   <!-- <script>
